--- a/basic_shapes/squares_triangles_and_circles.html
+++ b/basic_shapes/squares_triangles_and_circles.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- BACKGROUND -->
-<div style="position: fixed; z-index: -99; width: 100%; height: 100%; filter: grayscale(100%); -webkit-filter: grayscale(100%);">
+<div style="position: fixed; z-index: -99; width: 100%; height: 100%; filter: grayscale(100%) blur(5px); -webkit-filter: grayscale(100%) blur(5px);">
     <iframe frameborder="0" height="100%" width="100%" 
         src="https://www.youtube.com/embed/5souw4K5UQc">
     </iframe>
